# dhamma-pipeline

./: .gitignore  README.md  openai_examples.ipynb  pyproject.toml  simple_app.py  transcribe_from_youtube_video.ipynb
.streamlit/: secrets.toml
